--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body{
     padding: 0px;
     margin: 0;
+    background-color: rgb(209, 213, 231);
 }
 
 /* nav section */
@@ -194,3 +195,109 @@ body{
 .rev{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+/* Section 3 */
+
+.section-3{
+    background-color: white;
+    text-align: center;
+    margin: 100px 200px;
+    padding: 50px 250px;
+    margin-bottom: 50px;
+    height: 650px
+    
+}
+
+.sec3-heading{
+    font-size: 50px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.sec3-pass{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.sec3-button{
+    background-color: blue;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 12px;
+    padding: 10px 40px;
+}
+
+.sec3-bb{
+    list-style: none;
+}
+
+.sec3-img{
+    border-radius: 30px;
+}
+
+.sec3-button:hover{
+    background-color: red;
+}
+
+.section-3{
+    justify-items: ;
+}
+
+
+/* Section 4 */
+
+.sec4-all{
+    padding: 130px 230px;
+    display: flex;
+    gap: 200px;
+    justify-content: space-between;
+}
+
+.sec4-in-lab{
+    width: 50%;
+}
+
+.sec4-all input[type="text"], sec4-all textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: white;
+    width: 50%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
+}
+
+.sec4-all textarea{
+    padding: 0px 80px;
+    display: block;
+    border: none;
+    width: 50%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+}
+
+.btn-primary{
+    background-color: blue;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 12px;
+    padding: 0px 80px;
+    display: block;
+    border: none;
+    width: 55%;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+}
+
+.btn-primary:hover{
+    background-color: red;
+}
+
+.sec4-heading{
+    font-size: 80px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 80px;
+}
+
+
