--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ body{
     height: 64px;
     border-radius: 5px;
     background-color: white;
-    width: 50%;
+    width: 100%;
     padding: 10px 20px;
     margin-bottom: 24px;
     border: none;
@@ -271,7 +271,7 @@ body{
     padding: 0px 80px;
     display: block;
     border: none;
-    width: 50%;
+    width: 100%;
     padding: 10px 20px;
     margin-bottom: 24px;
 }
@@ -285,7 +285,7 @@ body{
     padding: 0px 80px;
     display: block;
     border: none;
-    width: 55%;
+    width: 106%;
     padding: 10px 20px;
     margin-bottom: 24px;
 }
@@ -300,4 +300,24 @@ body{
     margin-left: 80px;
 }
 
+.sec4-in-lab label{
+    font-size: 25px;
+    padding-bottom: 50px;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
+/* footer section */
+
+.footer-link{
+    display: flex;
+    justify-content: center;
+}
+
+.footer1{
+    text-align: center;
+    background-color: white;
+    width: 100%;
+    height: 200px;
+    padding: 50px;
+}
