--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,33 @@ body{
     text-align: center;
     background-color: white;
     width: 100%;
-    height: 200px;
+    height: 400px;
     padding: 50px;
+}
+
+.ft-head{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 60px;
+}
+
+.ft-pass{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.footer-link{
+    gap: 50px;
+    font-size: 20px;
+    list-style: none;
+}
+
+.footer-link a{
+    color: rgb(118, 101, 101);
+}
+
+.ft-span{
+    color: tomato;
+}
+
+.footer-link a:hover{
+    color: rgb(247, 17, 205);
 }
