--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 /* nav section */
 
 .header1{
-    background-image: url(/Picture/Assets/Hero-bg.png);
+    background-image: url(../Picture/Assets/Hero-bg.png);
     width: 100%;
     height: 698px;
     background-size: 100%;
